Implement next step recommendations

--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -1,4 +1,5 @@
 #jinja2: lstrip_blocks: True, trim_blocks: True
+{% set issue = namespace(found = false) %}
 ##### Store Details ##############################
 
 Incident: {{ snow_incident | upper }}
@@ -19,14 +20,17 @@ Store Switch:
 {% if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
   Pingable: Yes
 {% else %}
+{% set issue.found = true %}
   Pingable: No 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
   Pingable: N/A 🔴
 {% endif %}
 {% if not store_switch_uptime.stderr | default("failed") %}
   Uptime: {{ store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") }}
 {% else %}
+{% set issue.found = true %}
   Uptime: N/A 🔴
 {% endif %}
 Store Router:
@@ -34,18 +38,22 @@ Store Router:
 {% if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
   Pingable: Yes
 {% else %}
+{% set issue.found = true %}
   Pingable: No 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
   Pingable: N/A 🔴
 {% endif %}
 {% if not store_subnet_lookup.stderr | default("failed") %}
 {% if store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=False, ignorecase=False) %}
 MPLS Path: Up
 {% else %}
+{% set issue.found = true %}
 MPLS Path: Down 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 MPLS Path: N/A 🔴
 {% endif %}
 {% if not sdwan_store %}
@@ -53,9 +61,11 @@ MPLS Path: N/A 🔴
 {% if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) %}
 Broadband Tunnel: Up
 {% else %}
+{% set issue.found = true %}
 Broadband Tunnel: Down 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 Broadband Tunnel: N/A 🔴
 {% endif %}
 {% endif %}
@@ -63,9 +73,11 @@ Broadband Tunnel: N/A 🔴
 {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Internet Reachable: Yes
 {% else %}
+{% set issue.found = true %}
 Internet Reachable: No 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 Internet Reachable: N/A 🔴
 {% endif %}
 {% if not store_internet_egress.stderr | default("failed") %}
@@ -76,88 +88,129 @@ Internet Egress: Rocklin
 {% elif store_internet_egress.stdout | regex_search("sast1", multiline=True, ignorecase=False)  %}
 Internet Egress: Sacramento
 {% else %}
+{% set issue.found = true %}
 Internet Egress: Unknown 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 Internet Egress: N/A 🔴
 {% endif %}
 {% if not store_switch_dns_test.stderr | default("failed") %}
 {% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
 DNS Resolution Functional: Yes
 {% else %}
+{% set issue.found = true %}
 DNS Resolution Functional: No 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 DNS Resolution Functional: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_ws_site.stderr | default("failed") %}
 {% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Williams Sonoma Site (williams-sonoma.com) Reachable: Yes
 {% else %}
+{% set issue.found = true %}
 Williams Sonoma Site (williams-sonoma.com) Reachable: No 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 Williams Sonoma Site (williams-sonoma.com) Reachable: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_storesweb.stderr | default("failed") %}
 {% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: Yes
 {% else %}
+{% set issue.found = true %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: No 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_verifone.stderr | default("failed") %}
 {% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Verifone API (api.vfipayna.com) Reachable: Yes
 {% else %}
+{% set issue.found = true %}
 Verifone API (api.vfipayna.com) Reachable: No 🔴
 {% endif %}
 {% else %}
+{% set issue.found = true %}
 Verifone API (api.vfipayna.com) Reachable: N/A 🔴
 {% endif %}
 Verifone active firewall sessions:
 {% if not active_verifone_sessions_ashburn.stderr | default("failed") %}
   Ashburn: {{ active_verifone_sessions_ashburn.stdout_lines | length - 1 }}
 {% else %}
+{% set issue.found = true %}
   Ashburn: N/A 🔴
 {% endif %}
 {% if not active_verifone_sessions_rocklin.stderr | default("failed") %}
   Rocklin: {{ active_verifone_sessions_rocklin.stdout_lines | length - 1 }}
 {% else %}
+{% set issue.found = true %}
   Rocklin: N/A 🔴
 {% endif %}
 {% if not active_verifone_sessions_sacramento.stderr | default("failed") %}
   Sacramento: {{ active_verifone_sessions_sacramento.stdout_lines | length - 1 }}
 {% else %}
+{% set issue.found = true %}
   Sacramento: N/A 🔴
 {% endif %}
 {% if sdwan_store %}
+{% set sessions = { "private": { "count": 0, "down": 0 }, "internet": { "count": 0, "down": 0 } } %}
 Cisco SD-WAN:
   Tunnel Status:
 {% if asbc1_hub_1_sessions.json.data | default("") %}
     Ashburn Hub Router:
 {% for s in asbc1_hub_1_sessions.json.data %}
-      {{ s["local-color"] | title }}: {% if s.state == "up" %}Up{% else %}{{ s.state | title }} 🔴{% endif +%}
+{% set session_type = s["local-color"] | regex_replace("(\d$)|(^biz-)", "") %}
+{% if sessions[session_type].update({ "count": sessions[session_type]["count"] + 1 })  %}{% endif %}
+{% if s.state == "up" %}
+      {{ s["local-color"] | title }}: Up
+{% else %}
+{% set issue.found = true %}
+      {{ s["local-color"] | title }}: Down 🔴
+{% if sessions[session_type].update({ s.state: sessions[session_type][s.state] + 1 })  %}{% endif %}
+{% endif %}
 {% endfor %}
 {% else %}
+{% set issue.found = true %}
     Ashburn Hub Router: N/A 🔴
 {% endif %}
 {% if rkat1_hub_1_sessions.json.data | default("") %}
     Rocklin Hub Router 1:
 {% for s in rkat1_hub_1_sessions.json.data %}
-      {{ s["local-color"] | title }}: {% if s.state == "up" %}Up{% else %}{{ s.state | title }} 🔴{% endif +%}
+{% set session_type = s["local-color"] | regex_replace("(\d$)|(^biz-)", "") %}
+{% if sessions[session_type].update({ "count": sessions[session_type]["count"] + 1 })  %}{% endif %}
+{% if s.state == "up" %}
+      {{ s["local-color"] | title }}: Up
+{% else %}
+{% set issue.found = true %}
+      {{ s["local-color"] | title }}: Down 🔴
+{% if sessions[session_type].update({ s.state: sessions[session_type][s.state] + 1 })  %}{% endif %}
+{% endif %}
 {% endfor %}
 {% else %}
+{% set issue.found = true %}
     Rocklin Hub Router 1: N/A 🔴
 {% endif %}
 {% if rkat1_hub_2_sessions.json.data | default("") %}
     Rocklin Hub Router 2:
 {% for s in rkat1_hub_2_sessions.json.data %}
-      {{ s["local-color"] | title }}: {% if s.state == "up" %}Up{% else %}{{ s.state | title }} 🔴{% endif +%}
+{% set session_type = s["local-color"] | regex_replace("(\d$)|(^biz-)", "") %}
+{% if sessions[session_type].update({ "count": sessions[session_type]["count"] + 1 })  %}{% endif %}
+{% if s.state == "up" %}
+      {{ s["local-color"] | title }}: Up
+{% else %}
+{% set issue.found = true %}
+      {{ s["local-color"] | title }}: Down 🔴
+{% if sessions[session_type].update({ s.state: sessions[session_type][s.state] + 1 })  %}{% endif %}
+{% endif %}
 {% endfor %}
 {% else %}
+{% set issue.found = true %}
     Rocklin Hub Router 2: N/A 🔴
 {% endif %}
 {% if tloc_stats.json.data | default("") %}
@@ -172,16 +225,19 @@ Cisco SD-WAN:
 {% if stats_count > 0 %}
 {% set stats_mean = "%.2f" | format(stats | sum / stats_count) %}
 {% if p == "vQoE_Score" and stats_mean | int <= 5 %}
+{% set issue.found = true %}
       {{ p | replace("_", " ") }}: {{ stats_mean }} 🔴
 {% else %}
       {{ p | replace("_", " ") }}: {{ stats_mean }}
 {% endif %}
 {% else %}
+{% set issue.found = true %}
       {{ p | replace("_", " ") }}: N/A 🔴
 {% endif %}
 {% endfor %}
 {% endfor %}
 {% else %}
+{% set issue.found = true %}
     TLOC Stats (Past Hour): N/A 🔴
 {% endif %}
 {% endif %}
@@ -192,10 +248,12 @@ Mist Wireless:
 {% if mist_site_stats.json.num_ap_connected == mist_site_stats.json.num_ap %}
   Connected APs: {{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }}
 {% else %}
+{% set issue.found = true %}
   Connected APs: {{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }} 🔴
 {% endif %}
   Connected Clients: {{ mist_site_stats.json.num_clients }}
 {% else %}
+{% set issue.found = true %}
   Site: N/A 🔴
   Connected APs: N/A 🔴
   Connected Clients: N/A 🔴
@@ -208,14 +266,15 @@ Mist Wireless:
       Connected Clients: {{ mist_client_stats.json | selectattr('ssid', 'match', wlan.ssid) | length }}
 {% endfor %}
 {% else %}
+{% set issue.found = true %}
   SSIDs: N/A 🔴
 {% endif %}
 {% if mist_client_stats.json | default("") %}
 {% set rssi =  mist_client_stats.json | map(attribute='rssi') | sort %}
   RSSI:
-    Best: {% if rssi[-1] | int > -70 %}{{ rssi[-1] }}{% else %}{{ rssi[-1] }} 🔴{% endif +%}
-    Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}{{ rssi[0] }} 🔴{% endif +%}
-    Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}{{ rssi[rssi | length // 2] }} 🔴{% endif +%}
+    Best: {% if rssi[-1] | int > -70 %}{{ rssi[-1] }}{% else %}{{ rssi[-1] }} 🔴{% set issue.found = true %}{% endif +%}
+    Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}{{ rssi[0] }} 🔴{% set issue.found = true %}{% endif +%}
+    Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}{{ rssi[rssi | length // 2] }} 🔴{% set issue.found = true %}{% endif +%}
     Top 5 Worst:
 {% for c in (mist_client_stats.json | sort(attribute="rssi"))[:5] %}
 {% if c.hostname | default("") and c.hostname | default("") != "\"\"" %}
@@ -231,8 +290,32 @@ Mist Wireless:
         Username: {{ c.username | default("") }}
 {% endfor %}
 {% else %}
+{% set issue.found = true %}
   RSSI: N/A 🔴
 {% endif %}
+{% endif %}
+
+
+##### Recommended Next Steps ##############################
+
+{% if (sdwan_store and
+      (sessions.private.count == sessions.private.down or
+      sessions.internet.count == sessions.internet.down)) %}
+{% if sdwan_store %}
+{% if sessions.private.count == sessions.private.down %}
+⏺ All SD-WAN private tunnels are down, confirm that a Verizon support case was auto created and update the incident with the details
+{% endif %}
+{% if sessions.internet.count == sessions.internet.down %}
+⏺ All SD-WAN internet tunnels are down, open a ticket with Granite and update the incident with the details
+{% endif %}
+{% if issue.found %}
+⏺ Review the issues in the above Store Analysis section
+{% endif %}
+{% endif %}
+{% elif issue.found %}
+⏺ Review the issues in the above Store Analysis section
+{% else %}
+⏺ Look for latency issues in this diagnostic report
 {% endif %}
 
 
