--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -74,8 +74,6 @@ Broadband Tunnel: Down 🔴
 {% set issue.found = true %}
 Broadband Tunnel: N/A 🔴
 {% endif %}
-{% else %}
-{% set bb_tunnel_up = false %}
 {% endif %}
 {% if not store_internet_egress.stderr | default("failed") %}
 {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
@@ -316,7 +314,7 @@ Mist Wireless:
 {% if not store_reachable or
         sdwan_private_down or
         sdwan_internet_down or
-        not bb_tunnel_up %}
+        (not sdwan_store and not bb_tunnel_up) %}
 {# Specific recommendations #}
 {# Store connectivity #}
 {% if not store_reachable %}
