--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -17,7 +17,7 @@ Mist Wireless: {% if mist_store %}Yes{% else %}No{% endif +%}
 
 Store Switch:
 {% if not store_switch_ping.stderr | default("failed") %}
-{% set store_switch_pingable = true if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) else false %}
+{% set store_switch_pingable = true if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=False, ignorecase=False) else false %}
 {% if store_switch_pingable %}
   Pingable: Yes
 {% else %}
@@ -37,7 +37,7 @@ Store Switch:
 {% endif %}
 Store Router:
 {% if not store_router_ping.stderr | default("failed") %}
-{% set store_router_pingable = true if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) else false %}
+{% set store_router_pingable = true if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=False, ignorecase=False) else false %}
 {% if store_router_pingable %}
   Pingable: Yes
 {% else %}
@@ -62,7 +62,7 @@ MPLS Path: N/A 🔴
 {% endif %}
 {% if not sdwan_store %}
 {% if not store_bb_tunnel_status.stderr | default("failed") %}
-{% set bb_tunnel_up = true if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) else false %}
+{% set bb_tunnel_up = true if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=False, ignorecase=False) else false %}
 {% if bb_tunnel_up %}
 Broadband Tunnel: Up
 {% else %}
@@ -76,7 +76,7 @@ Broadband Tunnel: N/A 🔴
 {% endif %}
 {% endif %}
 {% if not store_internet_egress.stderr | default("failed") %}
-{% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=False, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=False, ignorecase=False) %}
 Internet Reachable: Yes
 {% else %}
 {% set issue.found = true %}
@@ -87,11 +87,11 @@ Internet Reachable: No 🔴
 Internet Reachable: N/A 🔴
 {% endif %}
 {% if not store_internet_egress.stderr | default("failed") %}
-{% if store_internet_egress.stdout | regex_search("asgi1", multiline=True, ignorecase=False) %}
+{% if store_internet_egress.stdout | regex_search("asgi1", multiline=False, ignorecase=False) %}
 Internet Egress: Ashburn
-{% elif store_internet_egress.stdout | regex_search("rkat1", multiline=True, ignorecase=False)  %}
+{% elif store_internet_egress.stdout | regex_search("rkat1", multiline=False, ignorecase=False)  %}
 Internet Egress: Rocklin
-{% elif store_internet_egress.stdout | regex_search("sast1", multiline=True, ignorecase=False)  %}
+{% elif store_internet_egress.stdout | regex_search("sast1", multiline=False, ignorecase=False)  %}
 Internet Egress: Sacramento
 {% else %}
 {% set issue.found = true %}
@@ -102,7 +102,7 @@ Internet Egress: Unknown 🔴
 Internet Egress: N/A 🔴
 {% endif %}
 {% if not store_switch_dns_test.stderr | default("failed") %}
-{% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
+{% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=False, ignorecase=False) %}
 DNS Resolution Functional: Yes
 {% else %}
 {% set issue.found = true %}
@@ -113,7 +113,7 @@ DNS Resolution Functional: No 🔴
 DNS Resolution Functional: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_ws_site.stderr | default("failed") %}
-{% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=False, ignorecase=False) %}
 Williams Sonoma Site (williams-sonoma.com) Reachable: Yes
 {% else %}
 {% set issue.found = true %}
@@ -124,7 +124,7 @@ Williams Sonoma Site (williams-sonoma.com) Reachable: No 🔴
 Williams Sonoma Site (williams-sonoma.com) Reachable: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_storesweb.stderr | default("failed") %}
-{% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=False, ignorecase=False) %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: Yes
 {% else %}
 {% set issue.found = true %}
@@ -135,7 +135,7 @@ Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: No 🔴
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_verifone.stderr | default("failed") %}
-{% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=False, ignorecase=False) %}
 Verifone API (api.vfipayna.com) Reachable: Yes
 {% else %}
 {% set issue.found = true %}
