--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -50,7 +50,8 @@ Store Router:
   Pingable: N/A 🔴
 {% endif %}
 {% if not store_subnet_lookup.stderr | default("failed") %}
-{% if store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=True, ignorecase=False) %}
+{% set mpls_path_up = store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=True, ignorecase=False) %}
+{% if mpls_path_up %}
 MPLS Path: Up
 {% else %}
 {% set issue.found = true %}
@@ -58,6 +59,7 @@ MPLS Path: Down 🔴
 {% endif %}
 {% else %}
 {% set issue.found = true %}
+{% set mpls_path_up = "unknown" %}
 MPLS Path: N/A 🔴
 {% endif %}
 {% if not sdwan_store %}
@@ -70,13 +72,14 @@ Broadband Tunnel: Up
 Broadband Tunnel: Down 🔴
 {% endif %}
 {% else %}
-{% set bb_tunnel_up = false %}
 {% set issue.found = true %}
+{% set bb_tunnel_up = "unknown" %}
 Broadband Tunnel: N/A 🔴
 {% endif %}
 {% endif %}
 {% if not store_internet_egress.stderr | default("failed") %}
-{% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% set internet_reachable = store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% if internet_reachable %}
 Internet Reachable: Yes
 {% else %}
 {% set issue.found = true %}
@@ -84,6 +87,7 @@ Internet Reachable: No 🔴
 {% endif %}
 {% else %}
 {% set issue.found = true %}
+{% set internet_reachable = "unknown" %}
 Internet Reachable: N/A 🔴
 {% endif %}
 {% if not store_internet_egress.stderr | default("failed") %}
@@ -124,7 +128,8 @@ Williams Sonoma Site (williams-sonoma.com) Reachable: No 🔴
 Williams Sonoma Site (williams-sonoma.com) Reachable: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_storesweb.stderr | default("failed") %}
-{% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% set store_wide_web_reachable = store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+{% if store_wide_web_reachable %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: Yes
 {% else %}
 {% set issue.found = true %}
@@ -132,6 +137,7 @@ Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: No 🔴
 {% endif %}
 {% else %}
 {% set issue.found = true %}
+{% set store_wide_web_reachable = "unknown" %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: N/A 🔴
 {% endif %}
 {% if not store_switch_connect_verifone.stderr | default("failed") %}
@@ -165,20 +171,20 @@ Verifone active firewall sessions:
   Sacramento: N/A 🔴
 {% endif %}
 {% if sdwan_store %}
-{% set sessions = { "private": { "count": 0, "down": 0 }, "internet": { "count": 0, "down": 0 } } %}
+{% set sdwan_sessions = { "private": { "count": 0, "down": 0 }, "internet": { "count": 0, "down": 0 } } %}
 Cisco SD-WAN:
   Tunnel Status:
 {% if asbc1_hub_1_sessions.json.data | default("") %}
     Ashburn Hub Router:
 {% for s in asbc1_hub_1_sessions.json.data %}
 {% set session_type = s["local-color"] | regex_replace("(\d$)|(^biz-)", "") %}
-{% if sessions[session_type].update({ "count": sessions[session_type]["count"] + 1 })  %}{% endif %}
+{% if sdwan_sessions[session_type].update({ "count": sdwan_sessions[session_type]["count"] + 1 })  %}{% endif %}
 {% if s.state == "up" %}
       {{ s["local-color"] | title }}: Up
 {% else %}
 {% set issue.found = true %}
       {{ s["local-color"] | title }}: Down 🔴
-{% if sessions[session_type].update({ s.state: sessions[session_type][s.state] + 1 })  %}{% endif %}
+{% if sdwan_sessions[session_type].update({ s.state: sdwan_sessions[session_type][s.state] + 1 })  %}{% endif %}
 {% endif %}
 {% endfor %}
 {% else %}
@@ -189,13 +195,13 @@ Cisco SD-WAN:
     Rocklin Hub Router 1:
 {% for s in rkat1_hub_1_sessions.json.data %}
 {% set session_type = s["local-color"] | regex_replace("(\d$)|(^biz-)", "") %}
-{% if sessions[session_type].update({ "count": sessions[session_type]["count"] + 1 })  %}{% endif %}
+{% if sdwan_sessions[session_type].update({ "count": sdwan_sessions[session_type]["count"] + 1 })  %}{% endif %}
 {% if s.state == "up" %}
       {{ s["local-color"] | title }}: Up
 {% else %}
 {% set issue.found = true %}
       {{ s["local-color"] | title }}: Down 🔴
-{% if sessions[session_type].update({ s.state: sessions[session_type][s.state] + 1 })  %}{% endif %}
+{% if sdwan_sessions[session_type].update({ s.state: sdwan_sessions[session_type][s.state] + 1 })  %}{% endif %}
 {% endif %}
 {% endfor %}
 {% else %}
@@ -206,13 +212,13 @@ Cisco SD-WAN:
     Rocklin Hub Router 2:
 {% for s in rkat1_hub_2_sessions.json.data %}
 {% set session_type = s["local-color"] | regex_replace("(\d$)|(^biz-)", "") %}
-{% if sessions[session_type].update({ "count": sessions[session_type]["count"] + 1 })  %}{% endif %}
+{% if sdwan_sessions[session_type].update({ "count": sdwan_sessions[session_type]["count"] + 1 })  %}{% endif %}
 {% if s.state == "up" %}
       {{ s["local-color"] | title }}: Up
 {% else %}
 {% set issue.found = true %}
       {{ s["local-color"] | title }}: Down 🔴
-{% if sessions[session_type].update({ s.state: sessions[session_type][s.state] + 1 })  %}{% endif %}
+{% if sdwan_sessions[session_type].update({ s.state: sdwan_sessions[session_type][s.state] + 1 })  %}{% endif %}
 {% endif %}
 {% endfor %}
 {% else %}
@@ -279,8 +285,8 @@ Mist Wireless:
 {% set rssi =  mist_client_stats.json | map(attribute='rssi') | sort %}
   RSSI:
     Best: {% if rssi[-1] | int > -70 %}{{ rssi[-1] }}{% else %}{{ rssi[-1] }} 🔴{% set issue.found = true %}{% endif +%}
-    Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}{{ rssi[0] }} 🔴{% set issue.found = true %}{% endif +%}
-    Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}{{ rssi[rssi | length // 2] }} 🔴{% set issue.found = true %}{% endif +%}
+    Worst: {% if rssi[0] | int > -70 %}{{ rssi[0] }}{% else %}{{ rssi[0] }} 🔴{% endif +%}
+    Median: {% if rssi[rssi | length // 2] | int > -70 %}{{ rssi[rssi | length // 2] }}{% else %}{{ rssi[rssi | length // 2] }} 🔴{% endif +%}
     Top 5 Worst:
 {% for c in (mist_client_stats.json | sort(attribute="rssi"))[:5] %}
 {% if c.hostname | default("") and c.hostname | default("") != "\"\"" %}
@@ -304,39 +310,47 @@ Mist Wireless:
 
 ##### Recommended Next Steps ##############################
 
-{% set sdwan_private_down = true if sdwan_store and
-                                        (sessions.private.count > 0 and
-                                        sessions.private.count == sessions.private.down) else false %}
-{% set sdwan_internet_down = true if sdwan_store and
-                                        (sessions.internet.count > 0 and
-                                        sessions.internet.count == sessions.internet.down) else false %}
-{% set store_reachable = true if store_switch_pingable and store_router_pingable else false %}
-{% if not store_reachable or
-        sdwan_private_down or
-        sdwan_internet_down or
-        (not sdwan_store and not bb_tunnel_up) %}
+{% set sdwan_all_private_down = true if sdwan_store and
+                                          (sdwan_sessions.private.count > 0 and
+                                          sdwan_sessions.private.count == sdwan_sessions.private.down) else false %}
+{% set sdwan_all_internet_down = true if sdwan_store and
+                                          (sdwan_sessions.internet.count > 0 and
+                                          sdwan_sessions.internet.count == sdwan_sessions.internet.down) else false %}
+{% set store_reachable = true if store_switch_pingable or store_router_pingable else false %}
+{% if issue.found or
+        sdwan_all_private_down or
+        sdwan_all_internet_down or
+        not store_reachable %}
 {# Specific recommendations #}
-{# Store connectivity #}
 {% if not store_reachable %}
-{# If the store router and switch are not pingable #}
 ⏺ Store is not reachable, call the store MOD to verify power
-{% elif sdwan_store %}
-{% if sdwan_private_down %}
+{% else %}
+{# All other specific recommendations #}
+{% if sdwan_all_private_down %}
 ⏺ All SD-WAN private tunnels are down, confirm that a Verizon support case was auto created and update the incident with the details
 {% endif %}
-{% if sdwan_internet_down %}
+{% if sdwan_all_internet_down %}
 ⏺ All SD-WAN internet tunnels are down, open a ticket with Granite and update the incident with the details
 {% endif %}
-{% else %}
-{% if not bb_tunnel_up %}
-{# Else if no SD-WAN and broadband tunnel is down #}
+{% if not sdwan_store and not bb_tunnel_up %}
 ⏺ Broadband tunnel is down, open a ticket with Granite and update the incident with the details
+{% endif %}
+{% if not internet_reachable and
+        mpls_path_up and
+        store_router_pingable and
+        store_switch_pingable %}
+⏺ Internet is not reachable, escalate to DNL3
+{% elif not internet_reachable %}
+⏺ Internet is not reachable, open a ticket with Granite and update the incident with the details
+{% endif %}
+{% if not store_wide_web_reachable and
+        mpls_path_up and
+        store_router_pingable and
+        store_switch_pingable %}
+⏺ Store Wide Web is not reachable, contact Store App Support
 {% endif %}
 {% endif %}
 {# General recommendation #}
-⏺ Review all issues in the above Store Analysis section
-{% elif issue.found %}
-{# General recommendation when an issue is detected #}
 ⏺ Review all issues in the above Store Analysis section
 {% else %}
 {# Default recommendation #}
