Add additional recommended next step

--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -30,9 +30,11 @@ Store Switch:
   Pingable: N/A 🔴
 {% endif %}
 {% if not store_switch_uptime.stderr | default("failed") %}
-  Uptime: {{ store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") }}
+{% set switch_uptime = store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") %}
+  Uptime: {{ switch_uptime }}
 {% else %}
 {% set issue.found = true %}
+{% set switch_uptime = "unknown" %}
   Uptime: N/A 🔴
 {% endif %}
 Store Router:
@@ -351,6 +353,9 @@ Mist Wireless:
         store_router_pingable and
         store_switch_pingable %}
 ⏺ Store Wide Web is not reachable, contact Store App Support
+{% endif %}
+{% if switch_uptime != "unknown" and not switch_uptime | regex_search("hour", multiline=False, ignorecase=False) %}
+⏺ Store switch uptime is less than one hour, check other device uptimes to determine if there was a storewide power outage
 {% endif %}
 {% endif %}
 {# General recommendation #}
