--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -439,7 +439,7 @@ N/A
 
 
 {% if sdwan_store %}
-##### vManage: Rocklin Hub Router 1 BFD Sessions
+##### vManage: Rocklin Hub Router 1 BFD Sessions ##############################
 
 {% if rkat1_hub_1_sessions.json.data | default("") %}
 {{ rkat1_hub_1_sessions.json.data | ansible.builtin.to_nice_json }}
@@ -448,7 +448,7 @@ N/A
 {% endif %}
 
 
-##### vManage: Rocklin Hub Router 2 BFD Sessions
+##### vManage: Rocklin Hub Router 2 BFD Sessions ##############################
 
 {% if rkat1_hub_2_sessions.json.data | default("") %}
 {{ rkat1_hub_2_sessions.json.data | ansible.builtin.to_nice_json }}
@@ -457,7 +457,7 @@ N/A
 {% endif %}
 
 
-##### vManage: Ashburn Hub Router BFD Sessions
+##### vManage: Ashburn Hub Router BFD Sessions ##############################
 
 {% if asbc1_hub_1_sessions.json.data | default("") %}
 {{ asbc1_hub_1_sessions.json.data | ansible.builtin.to_nice_json }}
@@ -466,7 +466,7 @@ N/A
 {% endif %}
 
 
-##### vManage: TLOC Statistics
+##### vManage: TLOC Statistics ##############################
 
 {% if tloc_stats.json.data | default("") %}
 {{ tloc_stats.json.data | ansible.builtin.to_nice_json }}
@@ -497,7 +497,7 @@ N/A
 
 {% endif %}
 {% if mist_store %}
-##### Mist: Sites
+##### Mist: Sites ##############################
 
 {% if mist_sites.json | default("") %}
 {{ mist_sites.json | ansible.builtin.to_nice_json }}
@@ -506,7 +506,7 @@ N/A
 {% endif %}
 
 
-##### Mist: Site Stats
+##### Mist: Site Stats ##############################
 
 {% if mist_site_stats.json | default("") %}
 {{ mist_site_stats.json | ansible.builtin.to_nice_json }}
@@ -515,7 +515,7 @@ N/A
 {% endif %}
 
 
-##### Mist: Client Stats
+##### Mist: Client Stats ##############################
 
 {% if mist_client_stats.json | default("") %}
 {{ mist_client_stats.json | ansible.builtin.to_nice_json }}
@@ -524,7 +524,7 @@ N/A
 {% endif %}
 
 
-##### Mist: WLANs
+##### Mist: WLANs ##############################
 
 {% if mist_wlans.json | default("") %}
 {{ mist_wlans.json | ansible.builtin.to_nice_json }}
