--- a/playbooks/templates/snow_attach_store_diagnostic_report/diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report/diagnostic_report.j2
@@ -423,7 +423,7 @@
     {% endif %}
   {% endif %}
   {# General recommendation #}
-  {% set _ = recommendations.append("⏺ Review all issues in the above Store Analysis section") %}
+  {% set _ = recommendations.append("⏺ Review all issues in the below Store Analysis section") %}
 {% else %}
   {# Default recommendation #}
   {% set _ = recommendations.append("⏺ Look for latency issues in this diagnostic report") %}
